tests/fixtures/negative/code-style/ProhibitSuppressWarnings_SuppressWithDoubleQuotes.cls
// Violation: @SuppressWarnings with double quotes (should still match)
@SuppressWarnings("PMD")
public class Example12 {
    public void method() {
        int unused = 42;
    }
}

